Fetching users from server

--- a/src/app/admin-ui/admin-ui.component.html
+++ b/src/app/admin-ui/admin-ui.component.html
@@ -7,14 +7,14 @@
         <th scope="col">Handle</th>
       </tr>
     </thead>
-    <tbody>
+    <!-- <tbody>
         <tr>
             <td>{{userData[0].id}}</td>
             <td>{{userData[0].first_name}}</td>
             <td>{{userData[0].last_name}}</td>
             <td>{{userData[0].email}}</td>
         </tr>
-    </tbody>
+    </tbody> -->
 </table>
 
 
