Corrected a small mistake

--- a/src/app/admin-ui/admin-ui.component.html
+++ b/src/app/admin-ui/admin-ui.component.html
@@ -22,7 +22,7 @@
   </table>
   <div class="btn-container">
     <span *ngFor="let btn of totalPagesArray">
-      <button class="btn btn-primary btn-sm" (click)="changePage(btn)">
+      <button class="btn btn-primary btn-sm" (click)="onChangePage(btn)">
         {{btn}}
       </button>
     </span>
