--- a/src/app/admin-ui/admin-ui.component.css
+++ b/src/app/admin-ui/admin-ui.component.css
@@ -1,3 +1,7 @@
+#inputUser{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 .text-center{
     text-align: center;
 }
@@ -5,7 +9,9 @@
 span{
     margin-right: 10px;
 }
-
+.my-btn{
+    margin-top: 5px;
+}
 .center{
     display: flex;
     align-items: center;
